--- a/src/index.html
+++ b/src/index.html
@@ -4,3 +4,8 @@ title: страницы
 ---
 
 <li><a href="main.html" class="_progress__link">Главная</a></li>
+<li><a href="about.html" class="_progress__link">О компании</a></li> 
+<li><a href="ourWorks.html" class="_progress__link">Наши работы</a></li> 
+<li><a href="reviews.html" class="_progress__link">Отзывы</a></li> 
+<li><a href="contacts.html" class="_progress__link">Контакты</a></li> 
+<li><a href="articles.html" class="_progress__link">Статьи</a></li>
