--- a/src/main.html
+++ b/src/main.html
@@ -3,4 +3,206 @@ layout: default
 title: Главная
 ---
 
-<div class="main"></div>
+<div class="main">
+
+  <section class="preview container dark">
+
+    <h1 class="h1 text-center max-w-853">Kondoor - это любая мебель на заказ от производителя</h1>
+    <a href="#" class="page-button mt-60">Заказать изделие</a>
+
+    <picture>
+      <source srcset="./assets/images/contacts/contacts-1-mobile.jpg" media="(max-width:500px)">
+      <img class="back-cover" src="./assets/images/main/main.jpg" alt="">
+    </picture>
+  </section>
+
+  <section class="aboutBlock container">
+    <h2 class="h2">о компании</h2>
+
+    <p class="aboutBlock-desc">Компания «Kondoor» специализируется на изготовлении мебели из массива ценных пород
+      древесины с 2004 года. Накопленный опыт и современное оборудование позволяют нашей столярной мастерской выполнять
+      индивидуальные авторские заказы, соответствующие европейским стандартам качества.</p>
+
+    <div class="aboutBlock-wrapper">
+      <ul class="aboutBlock-list">
+        <li>
+          <div class="aboutBlock-num">19</div>
+          <p>лет работы</p>
+        </li>
+        <li>
+          <div class="aboutBlock-num">3642</div>
+          <p>выполненных проекта</p>
+        </li>
+        <li>
+          <div class="aboutBlock-num">20</div>
+          <p>городов России</p>
+        </li>
+      </ul>
+
+      <a href="#" class="page-button">Подробнее о нас</a>
+    </div>
+  </section>
+
+  <section class="values container dark">
+    <h2 class="h2">Ценность деревянных изделий из массива</h2>
+
+    <ul class="values-list">
+      <li>
+        <div class="img-contain"><img src="./assets/images/main/values/values-1.svg" alt="values"></div>
+        <p>Экологичность и натуральность</p>
+      </li>
+      <li>
+        <div class="img-contain"><img src="./assets/images/main/values/values-2.svg" alt="values"></div>
+        <p>Возможность использования лаков на водной основе</p>
+      </li>
+      <li>
+        <div class="img-contain"><img src="./assets/images/main/values/values-3.svg" alt="values"></div>
+        <p>Предварительная сборка простота монтажа</p>
+      </li>
+      <li>
+        <div class="img-contain"><img src="./assets/images/main/values/values-4.svg" alt="values"></div>
+        <p>Повышенная звуко и теплоизоляция</p>
+      </li>
+    </ul>
+  </section>
+
+  <section class="works container">
+    <div class="justify-between">
+      <h2 class="h2">Наши работы</h2>
+      <a href="#" class="page-button">Посмотреть все работы</a>
+    </div>
+
+
+    <div class="works-swiper-wrapper">
+      <div class="swiper works-swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <ul>
+              <li style="background-image: url('./assets/images/main/works/works-1.jpg');">
+                <a href="#">
+                  Стеновые <br>панели
+                </a>
+              </li>
+              <li style="background-image: url('./assets/images/main/works/works-2.jpg');">
+                <a href="#">
+                  Спальни
+                </a>
+              </li>
+              <li style="background-image: url('./assets/images/main/works/works-3.jpg');">
+                <a href="#">
+                  детские комнаты
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="swiper-slide">
+            <ul>
+              <li style="background-image: url('./assets/images/main/works/works-4.jpg');">
+                <a href="#">
+                  Гардеродные
+                </a>
+              </li>
+              <li style="background-image: url('./assets/images/main/works/works-5.jpg');">
+                <a href="#">
+                  Шкафы
+                </a>
+              </li>
+              <li style="background-image: url('./assets/images/main/works/works-6.jpg');">
+                <a href="#">
+                  кухонные гарнитуры
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <button class="arrow-button next"><svg>
+          <use href='#nextIcon'></use>
+        </svg></button>
+      <button class="arrow-button prev"><svg>
+          <use href='#prevIcon'></use>
+        </svg></button>
+    </div>
+  </section>
+
+  <section class="how container dark">
+    <h2 class="h2">как создаются наши изделия</h2>
+
+    <ul class="how-list">
+      <li>
+        <div class="img-cover"><img src="./assets/images/main/how/how-1.jpg" alt="how"></div>
+        <h3 class="how-subtitle">Визуализация</h3>
+      </li>
+      <li>
+        <div class="img-cover"><img src="./assets/images/main/how/how-2.jpg" alt="how"></div>
+        <h3 class="how-subtitle">Чертежи</h3>
+      </li>
+      <li>
+        <div class="img-cover"><img src="./assets/images/main/how/how-3.jpg" alt="how"></div>
+        <h3 class="how-subtitle">Изготовление изделия</h3>
+      </li>
+      <li>
+        <div class="img-cover"><img src="./assets/images/main/how/how-4.jpg" alt="how"></div>
+        <h3 class="how-subtitle">Доставка и установка</h3>
+      </li>
+    </ul>
+  </section>
+
+  <section class="collabe container ">
+    <h2 class="h2">Как происходит сотрудничество</h2>
+
+    <ol class="collabe-list">
+      <li>
+        <h3 class="collabe-subtitle">Выбор изделия</h3>
+        <p class="collabe-desc">Вы выбираете понравившееся изделие, либо приходите со своим дизайн-проектом или своими идеями</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">Заявка</h3>
+        <p class="collabe-desc">Вы оставляете заявку, прикрепляя ссылки на понравившиеся работы или на Ваш дизайн-проект</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">уточнение деталей</h3>
+        <p class="collabe-desc">Наш менеджер обрабатывает заявку, связывается с Вами для уточнения деталей и консультирует по заказу</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">Замеры</h3>
+        <p class="collabe-desc">На Ваш адрес приезжает замерщик</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">Смета и сроки</h3>
+        <p class="collabe-desc">Мы составляем смету, оговариваются сроки</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">Чертежи и материалы</h3>
+        <p class="collabe-desc">Мы подготавливаем чертежи и согласовываем материалы</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">Изготовление изделия</h3>
+        <p class="collabe-desc">Мы изготавливаем мебель в срок, высылаем фото-видеоотчеты каждого этапа изготовления</p>
+      </li>
+      <li>
+        <h3 class="collabe-subtitle">доставка</h3>
+        <p class="collabe-desc">Мы бережно транспортируем и устанавливаем готовое изделие</p>
+      </li>
+    </ol>
+  </section>
+
+  <section class="faq container dark">
+    <h2 class="h2">Вопросы и ответы</h2>
+
+    <div class="faq-accord">
+      <ul class="accordion-list">
+        <li class="accordion">
+          <button class="accordion-button">Сколько будет стоить мой заказ?</button>
+
+          <div class="accordion-block">
+            <div class="accordion-inner">
+              Мы расчитываем стоимость вашего заказа индивидуально, учитывая особенности вашего проекта. Важными факторами, влияющими на цену, являются сложность дизайна мебели, выбранные материалы и фурнитура.
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+</div>
