--- a/src/main.html
+++ b/src/main.html
@@ -5,19 +5,19 @@ title: Главная
 
 <div class="main">
 
-  <section class="preview container dark">
+  <section class="preview --about container dark">
 
-    <h1 class="h1 text-center max-w-853">Kondoor - это любая мебель на заказ от производителя</h1>
-    <a href="#" class="page-button mt-60">Заказать изделие</a>
+    <h1 class="h1 text-center max-w-853">Kondoor - это любая мебель на заказ <br class="sm-block">от производителя</h1>
+    <button class="page-button mt-60 onloadanim" data-scroll="#mainForm">Заказать изделие</button>
 
     <picture>
-      <source srcset="./assets/images/contacts/contacts-1-mobile.jpg" media="(max-width:500px)">
-      <img class="back-cover" src="./assets/images/main/main.jpg" alt="">
+      <source srcset="./assets/images/main/main-sm.jpg" media="(max-width:500px)">
+      <img class="back-cover" src="./assets/images/main/main.jpg" alt="main">
     </picture>
   </section>
 
   <section class="aboutBlock container">
-    <h2 class="h2">о компании</h2>
+    <h2 class="h2" data-aos="fade-up">о компании</h2>
 
     <p class="aboutBlock-desc">Компания «Kondoor» специализируется на изготовлении мебели из массива ценных пород
       древесины с 2004 года. Накопленный опыт и современное оборудование позволяют нашей столярной мастерской выполнять
@@ -25,41 +25,41 @@ title: Главная
 
     <div class="aboutBlock-wrapper">
       <ul class="aboutBlock-list">
-        <li>
+        <li data-aos="fade-up">
           <div class="aboutBlock-num">19</div>
           <p>лет работы</p>
         </li>
-        <li>
+        <li data-aos="fade-up">
           <div class="aboutBlock-num">3642</div>
           <p>выполненных проекта</p>
         </li>
-        <li>
+        <li data-aos="fade-up">
           <div class="aboutBlock-num">20</div>
           <p>городов России</p>
         </li>
       </ul>
 
-      <a href="#" class="page-button">Подробнее о нас</a>
+      <a href="#" class="page-button" data-aos="fade-left">Подробнее о нас</a>
     </div>
   </section>
 
   <section class="values container dark">
-    <h2 class="h2">Ценность деревянных изделий из массива</h2>
+    <h2 class="h2" data-aos="fade-up">Ценность деревянных изделий из массива</h2>
 
     <ul class="values-list">
-      <li>
+      <li data-aos="fade-left">
         <div class="img-contain"><img src="./assets/images/main/values/values-1.svg" alt="values"></div>
         <p>Экологичность и натуральность</p>
       </li>
-      <li>
+      <li data-aos="fade-left">
         <div class="img-contain"><img src="./assets/images/main/values/values-2.svg" alt="values"></div>
         <p>Возможность использования лаков на водной основе</p>
       </li>
-      <li>
+      <li data-aos="fade-left">
         <div class="img-contain"><img src="./assets/images/main/values/values-3.svg" alt="values"></div>
         <p>Предварительная сборка простота монтажа</p>
       </li>
-      <li>
+      <li data-aos="fade-left">
         <div class="img-contain"><img src="./assets/images/main/values/values-4.svg" alt="values"></div>
         <p>Повышенная звуко и теплоизоляция</p>
       </li>
@@ -68,8 +68,8 @@ title: Главная
 
   <section class="works container">
     <div class="justify-between">
-      <h2 class="h2">Наши работы</h2>
-      <a href="#" class="page-button">Посмотреть все работы</a>
+      <h2 class="h2" data-aos="fade-up">Наши работы</h2>
+      <a href="#" class="page-button" data-aos="fade-left">Посмотреть все <span class="sm-hidden">работы</span></a>
     </div>
 
 
@@ -127,7 +127,7 @@ title: Главная
   </section>
 
   <section class="how container dark">
-    <h2 class="h2">как создаются наши изделия</h2>
+    <h2 class="h2" data-aos="fade-up">как создаются <br class="sm-block">наши изделия</h2>
 
     <ul class="how-list">
       <li>
@@ -150,38 +150,41 @@ title: Главная
   </section>
 
   <section class="collabe container ">
-    <h2 class="h2">Как происходит сотрудничество</h2>
+    <h2 class="h2" data-aos="fade-up">Как происходит сотрудничество</h2>
 
     <ol class="collabe-list">
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Выбор изделия</h3>
-        <p class="collabe-desc">Вы выбираете понравившееся изделие, либо приходите со своим дизайн-проектом или своими идеями</p>
+        <p class="collabe-desc">Вы выбираете понравившееся изделие, либо приходите со своим дизайн-проектом или своими
+          идеями</p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Заявка</h3>
-        <p class="collabe-desc">Вы оставляете заявку, прикрепляя ссылки на понравившиеся работы или на Ваш дизайн-проект</p>
+        <p class="collabe-desc">Вы оставляете заявку, прикрепляя ссылки на понравившиеся работы или на Ваш дизайн-проект
+        </p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">уточнение деталей</h3>
-        <p class="collabe-desc">Наш менеджер обрабатывает заявку, связывается с Вами для уточнения деталей и консультирует по заказу</p>
+        <p class="collabe-desc">Наш менеджер обрабатывает заявку, связывается с Вами для уточнения деталей
+          и консультирует по заказу</p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Замеры</h3>
         <p class="collabe-desc">На Ваш адрес приезжает замерщик</p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Смета и сроки</h3>
         <p class="collabe-desc">Мы составляем смету, оговариваются сроки</p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Чертежи и материалы</h3>
         <p class="collabe-desc">Мы подготавливаем чертежи и согласовываем материалы</p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Изготовление изделия</h3>
         <p class="collabe-desc">Мы изготавливаем мебель в срок, высылаем фото-видеоотчеты каждого этапа изготовления</p>
       </li>
-      <li>
+      <li data-aos="fade-up">
         <h3 class="collabe-subtitle">доставка</h3>
         <p class="collabe-desc">Мы бережно транспортируем и устанавливаем готовое изделие</p>
       </li>
@@ -189,20 +192,24 @@ title: Главная
   </section>
 
   <section class="faq container dark">
-    <h2 class="h2">Вопросы и ответы</h2>
+    <h2 class="h2" data-aos="fade-up">Вопросы и ответы</h2>
 
     <div class="faq-accord">
       <ul class="accordion-list">
-        <li class="accordion">
+        @for (let i=0;i<=3;i++) { <li class="accordion">
           <button class="accordion-button">Сколько будет стоить мой заказ?</button>
 
           <div class="accordion-block">
             <div class="accordion-inner">
-              Мы расчитываем стоимость вашего заказа индивидуально, учитывая особенности вашего проекта. Важными факторами, влияющими на цену, являются сложность дизайна мебели, выбранные материалы и фурнитура.
+              Мы расчитываем стоимость вашего заказа индивидуально, учитывая особенности вашего проекта. Важными
+              факторами, влияющими на цену, являются сложность дизайна мебели, выбранные материалы и фурнитура.
             </div>
           </div>
-        </li>
+          </li>
+          }
       </ul>
     </div>
   </section>
+
+  {{> callback}}
 </div>
