--- a/src/main.html
+++ b/src/main.html
@@ -5,7 +5,7 @@ title: Главная
 
 <div class="main">
 
-  <section class="preview --about container dark">
+  <section class="preview container dark">
 
     <h1 class="h1 text-center max-w-853">Kondoor - это любая мебель на заказ <br class="sm-block">от производителя</h1>
     <button class="page-button mt-60 onloadanim" data-scroll="#mainForm">Заказать изделие</button>
