--- a/src/main.html
+++ b/src/main.html
@@ -160,7 +160,7 @@ title: Главная
       </li>
       <li data-aos="fade-up">
         <h3 class="collabe-subtitle">Заявка</h3>
-        <p class="collabe-desc">Вы оставляете заявку, прикрепляя ссылки на понравившиеся работы или на Ваш дизайн-проект
+        <p class="collabe-desc">Вы оставляете <button class="page-link" data-scroll="#mainForm">заявку</button>, прикрепляя ссылки на понравившиеся работы или на Ваш дизайн-проект
         </p>
       </li>
       <li data-aos="fade-up">
