--- a/src/ourWorks.html
+++ b/src/ourWorks.html
@@ -16,7 +16,7 @@
 
 <section class="ourWorks-list py-80 dark container">
   <ul>
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/1.jpg" alt="ourWorks">
@@ -28,7 +28,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/2.jpg" alt="ourWorks">
@@ -40,7 +40,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/3.jpg" alt="ourWorks">
@@ -52,7 +52,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/4.jpg" alt="ourWorks">
@@ -64,7 +64,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/5.jpg" alt="ourWorks">
@@ -76,7 +76,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/6.jpg" alt="ourWorks">
@@ -88,7 +88,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/7.jpg" alt="ourWorks">
@@ -100,7 +100,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/8.jpg" alt="ourWorks">
@@ -112,7 +112,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/9.jpg" alt="ourWorks">
@@ -124,7 +124,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/10.jpg" alt="ourWorks">
@@ -136,7 +136,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/11.jpg" alt="ourWorks">
@@ -148,7 +148,7 @@
       </a>
     </li>
 
-    <li data-aos="flip-left">
+    <li data-aos="fade-up">
       <a href="#">
         <span class="img-cover">
           <img src="./assets/images/ourWorks/list/12.jpg" alt="ourWorks">
