--- a/src/reviews.html
+++ b/src/reviews.html
@@ -16,20 +16,20 @@
 <div class="reviews-list container dark py-80">
   <div class="reviews-list-two-column">
     <ul>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/1.jpg" alt="review"></li>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/2.jpg" alt="review"></li>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/3.jpg" alt="review"></li>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/4.jpg" alt="review"></li>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/5.jpg" alt="review"></li>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/6.jpg" alt="review"></li>
-      <li data-aos="flip-right"><img src="./assets/images/reviews/7.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/1.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/2.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/3.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/4.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/5.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/6.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/7.jpg" alt="review"></li>
     </ul>
     <ul>
-      <li data-aos="flip-left"><img src="./assets/images/reviews/8.jpg" alt="review"></li>
-      <li data-aos="flip-left"><img src="./assets/images/reviews/9.jpg" alt="review"></li>
-      <li data-aos="flip-left"><img src="./assets/images/reviews/10.jpg" alt="reviews"></li>
-      <li data-aos="flip-left"><img src="./assets/images/reviews/11.jpg" alt="reviews"></li>
-      <li data-aos="flip-left"><img src="./assets/images/reviews/12.jpg" alt="reviews"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/8.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/9.jpg" alt="review"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/10.jpg" alt="reviews"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/11.jpg" alt="reviews"></li>
+      <li data-aos="fade-up"><img src="./assets/images/reviews/12.jpg" alt="reviews"></li>
     </ul>
   </div>
 </div>
